--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape android:shape="rectangle"  >
-            <corners android:radius="20sp" />
-            <gradient android:angle="-150" android:startColor="#72ACAC" android:endColor="#E9C46A"/>
+            <corners android:radius="40sp" />
+            <solid android:color="@color/galbenciudat"/>
         </shape>
 
     </item>
