--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="albastrudeschis">#72ACAC</color>
-    <color name="albastruinchis">#0B1B32</color>
-    <color name="galbenciudat">#E9C46A</color>
-
+    <color name="blue">#72acac</color>
+    <color name="yellow">#e9c46a</color>
+    <color name="dark_blue">#0b1b32</color>
 </resources>
